# husky_ws_2324

./: .gitignore  README.md  gps_driver.py  husky_control_joystick.sh  startup.sh
custom_nav_stack_pkg/: CMakeLists.txt  package.xml
custom_nav_stack_pkg/rviz/: field_testing.rviz  husky_real_robot.rviz  husky_real_robot2.rviz  zed.rviz
custom_nav_stack_pkg/scripts/: custom_nav_stack.py  destination_lat_long.txt  joystick_test.py  mode_control.py  mode_control.py.bck  mode_control_gps_removed.py
custom_nav_stack_pkg/scripts/gps_bck/: destination_lat_long.txt.5points_on_cabause  destination_lat_long.txt.bck  destination_lat_long.txt.bck2  destination_lat_long.txt.bck3  destination_lat_long.txt.far
custom_nav_stack_pkg/src/: config.txt  config2 (copy).txt  config2.txt  cpp_node.cpp  cpp_node2 (copy).cpp  cpp_node2.cpp  extract_clusters.h  extract_clusters.hpp
gps_goal/: package.xml  setup.cfg  setup.py
gps_goal/gps_goal/: custom_nav_stack.py  gps_driver.py  gps_goal_calculation.py  nav2_publish.py
gps_goal/launch/: gps_goal.launch.py  initialize_origin.launch.py
gps_goal/scripts/: destination_lat_long.txt  test_pub.py
husky/husky_base/include/husky_base/: husky_hardware.hpp  husky_status.hpp
husky/husky_base/launch/: base.launch  base.launch.py
husky/husky_base/src/: husky_hardware.cpp  husky_status.cpp
husky/husky_bringup/launch/: accessories.launch.py
husky/husky_control/: joy_remapper.py
husky/husky_control/config/: teleop_flysky_red_dongle.yaml  teleop_logitech.yaml  teleop_ps4.yaml  twist_mux.yaml
husky/husky_control/launch/: teleop.launch  teleop_joy.launch_ORIGINAL.py  teleop_joy.launch_flysky_red_dongle.py
husky/husky_description/: CMakeLists.txt  package.xml
husky/husky_description/launch/: description.launch.py
husky/husky_description/meshes/accessories/: 510_mm_sensor_arch.dae  realsense.stl
husky/husky_description/urdf/: husky.urdf.xacro  husky.urdf.xacro.ORIG  husky_macro.urdf.xacro  husky_macro.urdf.xacro.ORIG
husky/husky_description/urdf/accessories/: VLP-16.urdf.xacro  hokuyo_ust10.urdf.xacro  intel_realsense.urdf.xacro  sensor_arch.urdf.xacro  vlp16_mount.urdf.xacro  zed2.xacro
husky/husky_gazebo/worlds/: clearpath_playpen.world
local_nav_pkg/: CMakeLists.txt  local_nav_start  package.xml
local_nav_pkg/config/: ekf.yaml  ekf1.yaml  ekf2.yaml  ekf3.yaml  ekf_global.yaml  navsat.yaml
local_nav_pkg/launch/: inference.launch.py  local_nav.launch.py  robot_operations.launch.py  simulation.launch.py
local_nav_pkg/msg/: Corner.msg  Penguin.msg  PenguinApproachStatus.msg  PenguinInference.msg  PenguinInferenceList.msg  PenguinList.msg
local_nav_pkg/params/: nav2_params.yaml
local_nav_pkg/rviz/: config.rviz  urdf_config.rviz
local_nav_pkg/scripts/: 10.csv  11.csv  12.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  approach_speed_controller (copy).py  approach_speed_controller.py  base_lidar_detect (copy).py  base_lidar_detect.py  client_python.py  collision_avoid (another copy).py  collision_avoid (copy).py  collision_avoid.py  enforce_speed_limit.py  get_penguin_positions (copy).py  get_penguin_positions copy.py  get_penguin_positions.py  goal_reached.py  inference.py  inference2.py  lidar_csv.py  lidar_detect.py  lidartest1.csv  lidartest2.csv  lidartest3.csv  nav_to_pose.py  penguin_to_goal_pose.py  penguin_vis.py  point_cloud2.py  pred_result_penguin.txt  rfid_reader.py  run_inference.sh  set_speed_limit.py  zed_inference.py  (+2 more)
local_nav_pkg/scripts/rfid_reader/: utils.py  utils_usb.py
local_nav_pkg/world/: cone_world.sdf  cone_world.world  empty_cones.world  my_world.sdf  my_world1.sdf  one_cone.world  three_cone.world  two_cone.world
log/: latest_build
marti_common/swri_transform_util/nodes/: initialize_origin.py
microstrain_inertial/microstrain_inertial_rqt/microstrain_inertial_rqt_common/resource/: RTKStatus.ui
microstrain_inertial/microstrain_inertial_rqt/microstrain_inertial_rqt_common/src/microstrain_inertial_rqt/: rtk_status.py
microstrain_inertial/microstrain_inertial_rqt/microstrain_inertial_rqt_common/src/microstrain_inertial_rqt/utils/: common.py  constants.py  subscribers.py
navigation2/nav2_bringup/bringup/params/: nav2_params.yaml  nav2_params.yaml.ORIG  nav2_params_dev.yaml
navigation2/nav2_costmap_2d/test/: costmap_params.yaml
navigation2/nav2_msgs/: CMakeLists.txt
pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
testgit/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index
testgit/logs/: HEAD
testgit/logs/refs/heads/: antland2324  main
testgit/logs/refs/remotes/origin/: antland2324_2  main
testgit/refs/heads/: antland2324  main
zed-ros2-wrapper/zed_wrapper/config/: common.yaml  zed2.yaml
zed-ros2-wrapper/zed_wrapper/urdf/: zed_macro.urdf.xacro
